tests/machine/x/fs/string_concat.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:28:27Z
open System

printfn "%s" "hello " + "world"
